--- a/SRResume.html
+++ b/SRResume.html
@@ -9,22 +9,22 @@
 		</HEADER>
 		<hr>
 		<section>
-			<h1>Goals</h1>
-			<p>Want to be a successful engineer</p>
+			<h3>Goals</h3>
+			<p>Want to build amazing software an make life easier.</p>
 
 		</section>
 		<section>
-			<h1>Skills</h1>
-			<h2>Programming Languages</h2>
-			<h2>Databases</h2>
-			<h2>Platforms</h2>
-			<h2>Version Control</h2>
-			<h2>Operating Systems</h2>
-			<h2>Other Tools</h2>
-			<h2>Soft Skills</h2>
+			<h3>Skills</h3>
+			<h5>Programming Languages</h5>
+			<h5>Databases</h5>
+			<h5>Platforms</h5>
+			<h5>Version Control</h5>
+			<h5>Operating Systems</h5>
+			<h5>Other Tools</h5>
+			<h5>Soft Skills</h5>
 		</section>
 		<section>
-			<h1>Work Experience</h1>
+			<h3>Work Experience</h3>
 			<table>
 				<thead><tr><th>Work Experience</th></tr></thead>
 				<tbody>
@@ -37,12 +37,13 @@
 					<th>Contact Info</th>
 				
 				</tr>
+				<tr><td>2006</td><td>ABC</td><td>San Mateo</td><td>Engineer</td><td>2006</td><td>2006</td></tr>
 				</tbody>
 
 			</table>	
 		</section>
 		<section>
-		<h1>Education</h1>
+		<h3>Education</h3>
 		<table>
 				<thead><tr><th>Education</th></tr></thead>
 				<tbody>
@@ -60,13 +61,13 @@
 			</table>	
 		</section>
 		<section>
-		<h1>Achievements</h1>
+		<h3>Achievements</h3>
 		</section>
 		<section>
-		<h1>Hobbies and Interests</h1>
+		<h3>Hobbies and Interests</h3>
 		</section>
 		<section>
-		<h1>References</h1>
+		<h3>References</h3>
 		</section>
 
 	<footer>
