--- a/SRResume.html
+++ b/SRResume.html
@@ -26,17 +26,14 @@
 		<section>
 			<h3>Work Experience</h3>
 			<table>
-				<thead><tr><th>Work Experience</th></tr></thead>
-				<tbody>
-				<tr>
-					<th>Time</th>
+				<thead><tr><th>Time</th>
 					<th>Name</th>
 					<th>Location</th>
 					<th>Position Title</th>
 					<th>Responsibilities</th>
-					<th>Contact Info</th>
+					<th>Contact Info</th></tr></thead>
+				<tbody>
 				
-				</tr>
 				<tr><td>2006</td><td>ABC</td><td>San Mateo</td><td>Engineer</td><td>2006</td><td>2006</td></tr>
 				</tbody>
 
